# QtDBMigration

./: CMakeLists.txt  README.md
src/: AbstractConfig.cpp  AbstractConfig.h  CMakeLists.txt  JsonConfig.cpp  JsonConfig.h  QtDBMigration.cpp  QtDBMigration.h  QtDBMigration.pri  QtDBMigration.pro  SchemaVersion.cpp  SchemaVersion.h
test/: QtDBMigrationTest.cpp  QtDBMigrationTest.pro
test/assets/: test_migrate_1.json
